examples/Errors/201.zph
a # INT:5;
a ? push:;